// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildRequest sample request by global admin 1`] = `
{
  "aggs": {
    "fromRootDomain": {
      "terms": {
        "field": "fromRootDomain.keyword",
      },
    },
    "name": {
      "terms": {
        "field": "name.keyword",
      },
    },
    "organization": {
      "terms": {
        "field": "organization.name.keyword",
      },
    },
    "services": {
      "aggs": {
        "name": {
          "terms": {
            "field": "services.service.keyword",
          },
        },
        "port": {
          "terms": {
            "field": "services.port",
          },
        },
        "products": {
          "aggs": {
            "cpe": {
              "terms": {
                "field": "services.products.cpe.keyword",
              },
            },
          },
          "nested": {
            "path": "products",
          },
        },
      },
      "nested": {
        "path": "services",
      },
    },
    "vulnerabilities": {
      "aggs": {
        "cve": {
          "terms": {
            "field": "vulnerabilities.cve.keyword",
          },
        },
        "severity": {
          "terms": {
            "field": "vulnerabilities.severity.keyword",
          },
        },
      },
      "nested": {
        "path": "vulnerabilities",
      },
    },
  },
  "highlight": {
    "fields": {
      "name": {},
    },
    "fragment_size": 200,
    "number_of_fragments": 1,
  },
  "query": {
    "bool": {
      "must": [
        {
          "match": {
            "parent_join": "domain",
          },
        },
        {
          "bool": {
            "should": [
              {
                "query_string": {
                  "analyze_wildcard": true,
                  "fields": [
                    "*",
                  ],
                  "query": "term",
                },
              },
              {
                "has_child": {
                  "inner_hits": {
                    "_source": [
                      "webpage_url",
                    ],
                    "highlight": {
                      "fields": {
                        "webpage_body": {},
                      },
                      "fragment_size": 50,
                      "number_of_fragments": 3,
                    },
                  },
                  "query": {
                    "query_string": {
                      "analyze_wildcard": true,
                      "fields": [
                        "*",
                      ],
                      "query": "term",
                    },
                  },
                  "type": "webpage",
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 25,
  "sort": [
    {
      "name.keyword": "asc",
    },
  ],
}
`;

exports[`buildRequest sample request by non-global admin 1`] = `
{
  "aggs": {
    "fromRootDomain": {
      "terms": {
        "field": "fromRootDomain.keyword",
      },
    },
    "name": {
      "terms": {
        "field": "name.keyword",
      },
    },
    "organization": {
      "terms": {
        "field": "organization.name.keyword",
      },
    },
    "services": {
      "aggs": {
        "name": {
          "terms": {
            "field": "services.service.keyword",
          },
        },
        "port": {
          "terms": {
            "field": "services.port",
          },
        },
        "products": {
          "aggs": {
            "cpe": {
              "terms": {
                "field": "services.products.cpe.keyword",
              },
            },
          },
          "nested": {
            "path": "products",
          },
        },
      },
      "nested": {
        "path": "services",
      },
    },
    "vulnerabilities": {
      "aggs": {
        "cve": {
          "terms": {
            "field": "vulnerabilities.cve.keyword",
          },
        },
        "severity": {
          "terms": {
            "field": "vulnerabilities.severity.keyword",
          },
        },
      },
      "nested": {
        "path": "vulnerabilities",
      },
    },
  },
  "highlight": {
    "fields": {
      "name": {},
    },
    "fragment_size": 200,
    "number_of_fragments": 1,
  },
  "query": {
    "bool": {
      "must": [
        {
          "terms": {
            "organization.id.keyword": [
              "id1",
            ],
          },
        },
        {
          "bool": {
            "must": [
              {
                "match": {
                  "parent_join": "domain",
                },
              },
              {
                "bool": {
                  "should": [
                    {
                      "query_string": {
                        "analyze_wildcard": true,
                        "fields": [
                          "*",
                        ],
                        "query": "term",
                      },
                    },
                    {
                      "has_child": {
                        "inner_hits": {
                          "_source": [
                            "webpage_url",
                          ],
                          "highlight": {
                            "fields": {
                              "webpage_body": {},
                            },
                            "fragment_size": 50,
                            "number_of_fragments": 3,
                          },
                        },
                        "query": {
                          "query_string": {
                            "analyze_wildcard": true,
                            "fields": [
                              "*",
                            ],
                            "query": "term",
                          },
                        },
                        "type": "webpage",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      ],
    },
  },
  "size": 25,
  "sort": [
    {
      "name.keyword": "asc",
    },
  ],
}
`;
